--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@tailwindcss/vite": "^4.1.16",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16"
   },
